//
// db3_setup.proto
// Copyright (C) 2023 db3.network Author imotai <codego.me@gmail.com>
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//    http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.
//
syntax = "proto3";

package db3_system_proto;

import "db3_base.proto";

message SetupRequest {
  string signature = 1;
  string payload = 2;
}

message SetupResponse {
  int64 code = 1;
  string msg = 2;
}

message GetSystemStatusRequest {}

service System {
  rpc Setup(SetupRequest) returns (SetupResponse) {}
  rpc GetSystemStatus(GetSystemStatusRequest) returns (db3_base_proto.SystemStatus) {}
}
